<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_enter_latitude"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLatitude"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_enter_longitude"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClick"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="Check Weather"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLongitude" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCurrentClick"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="Nearby Weather"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLongitude" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/btnClick"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <TextView
            android:id="@+id/txtLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strLatitude"
            android:layout_gravity="left"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

            <TextView
                android:id="@+id/txtLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strLongitude"
                android:layout_gravity="left"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strWeather"
                android:layout_gravity="left"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtMinTemprature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strMinimum_temprature"
                android:layout_gravity="left"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtMaxTemprature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strMax_temprature"
                android:layout_gravity="left"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strWind_speed"
                android:layout_gravity="left"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHumidity"
                android:layout_gravity="left"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strVisibility"
                android:layout_gravity="left"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_background"
            android:layout_margin="10dp"
            android:id="@+id/img"
            android:contentDescription="@string/app_name"
            android:visibility="gone"
            />



        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>




    <ProgressBar
        android:id="@+id/wp7progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClick"
        android:visibility="gone"
        />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>